[tool.poetry]
name = "mock-trading-platform"
version = "0.1.0"
description = "A in-memory trading platform designed for testing integrations with actual trading platforms"
authors = ["len <lenwhite@users.noreply.github.com>"]
license = "MIT"

[tool.isort]
profile = "black"
known_first_party = "mock_trading_platform"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.66.1"
sortedcontainers = "^2.4.0"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
flakehell = "^0.9.0"
isort = "^5.9.2"
black = "^21.7b0"
pytest = "^6.2.4"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.4.3"
pylint = "^2.9.4"

[tool.pytest.ini_options]
addopts = "--cov=mock_trading_platform"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
