[tool.poetry]
name = "pumpdump"
version = "0.1.0"
description = "A in-memory trading platform designed for testing integrations with actual trading platforms"
authors = ["len <lenwhite@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version="^0.66.1", optional=true}
sortedcontainers = "^2.4.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flakehell = "^0.9.0"
isort = "^5.9.2"
black = "^21.7b0"
pytest = "^6.2.4"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.4.3"
pylint = "^2.9.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "pumpdump"

[tool.pytest.ini_options]
addopts = "--cov=pumpdump"

[tool.flakehell]
extended_default_ignore=[]  # temporary, remove when flakehell fixes compatibility issue
exclude = [".*", "__pycache__", "env"]
iinclude = ["altonomy"]
format = "grouped"
max_line_length = 88
show_source = true
max_complexity = 10

[tool.flakehell.plugins]
pycodestyle = ["+*", "-E203", "-E266", "-E501", "-W503"]
pyflakes = ["+*"]
pylint = ["+*"]
mccabe = ["+*"]
flake8-black = ["+*"]
flake8-isort = ["+*"]

[tool.poetry.extras]
fastapi= ["fastapi"]